[package]
name = "hiper"
edition = "2024"
version = "0.4.0"
license = "MPL-2.0"
documentation = "https://docs.rs/hiper"
repository = "https://codeberg.org/lsunsi/hiper"
description = "hiperminimal rendering of hipertext through rust macros"
keywords = ["html", "markup", "template"]
categories = ["template-engine"]

[dependencies]
itoap = { version = "1.0.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
maud = { version = "0.27.0", default-features = false }
